--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ function fnExcelReport(){
     }  
     else                 //other browser not tested on IE 11
 	
-        sa = window.open('data:application/vnd.ms-excel,' + encodeURIComponent(tab_text)); 
+        sa = window.open('data:application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,' + encodeURIComponent(tab_text)); 
     return (sa);
 };
 
