--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ c-22.4,3-38.4,9.2-47.8,18.3c-11.2,10.9-13.6,26.7-16.3,45c-3.1,20.8-6.6,44.4-25.3
 <br>
 
 <img src="https://imesc.ma.gov.br/src/img/govMA.png" id="logo"  width="250" height="100">
+<img src="https://imesc.ma.gov.br/src/img/logo1-novo.png" id="logo2"  width="250" height="100">
 <h1 style="text-align: center;" >DATAIMESC</h1><br>
 <h6 style="text-align: center;" >LITE VERSION</h6><br>
 
@@ -753,6 +754,12 @@ td {
 #logo{
 position:fixed;
 top:130px;
+left:60px;
+
+}
+#logo2{
+position:fixed;
+top:190px;
 left:60px;
 
 }
