--- a/index.html
+++ b/index.html
@@ -753,14 +753,14 @@ td {
 }
 #logo{
 position:fixed;
-top:60px;
+top:40px;
 left:100px;
 
 }
 #logo2{
 position:fixed;
-top:140px;
-left:60px;
+top:90x;
+right:60px;
 
 }
 HTML CSSResult Skip Results Iframe
