--- a/index.html
+++ b/index.html
@@ -752,13 +752,13 @@ td {
     padding: 8px 15px;
 }
 #logo{
-position:fixed;
+position:absolute;
 top:40px;
 left:100px;
 
 }
 #logo2{
-position:fixed;
+position:absolute;
 top:90x;
 right:60px;
 
