--- a/index.html
+++ b/index.html
@@ -134,6 +134,107 @@ c-22.4,3-38.4,9.2-47.8,18.3c-11.2,10.9-13.6,26.7-16.3,45c-3.1,20.8-6.6,44.4-25.3
   <option value="98">98: Rendimento Médio da Produção - Tangerina</option>
   <option value="99">99: Rendimento Médio da Produção - Urucum (semente)</option>
   <option value="100">100: Valor da Produção Total - Lavoura Permanente</option>
+   <option value="100"> 100: 'Valor da Produção Total - Lavoura Permanente'</option>
+   <option value="101">101: 'Valor da Produção - Banana (cacho)'</option>
+   <option value="102">102: 'Valor da Produção - Borracha (látex coagulado)'</option>
+   <option value="103">103: 'Valor da Produção - Castanha de caju'</option>
+   <option value="104">104: 'Valor da Produção - Coco-da-baía'</option>
+   <option value="105">105: 'Valor da Produção - Laranja'</option>
+   <option value="106">106: 'Valor da Produção - Limão'</option>
+   <option value="107">107: 'Valor da Produção - Mamão'</option>
+   <option value="108">108: 'Valor da Produção - Manga'</option>
+   <option value="109">109: 'Valor da Produção - Maracujá'</option>
+   <option value="110">110: 'Valor da Produção - Pimenta-do-Reino'</option>
+   <option value="111">111: 'Valor da Produção - Tangerina'</option>
+   <option value="112">112: 'Valor da Produção - Urucum (semente)'</option>
+   <option value="113">113: 'Quantidade Produzida - Carvão Vegetal de Eucalipto '</option>
+   <option value="114">114: 'Quantidade Produzida - Carvão Vegetal de Pinus '</option>
+   <option value="115">115: 'Quantidade Produzida - Carvão Vegetal de Outras Espécies '</option>
+   <option value="116">116: 'Quantidade Produzida - Lenha de Eucalipto'</option>
+   <option value="117">117: 'Quantidade Produzida - Lenha de Pinus'</option>
+   <option value="118">118: 'Quantidade Produzida - Lenha de Outras Espécies'</option>
+   <option value="119">119: 'Quantidade Produzida - Madeira em Tora para Papel e Celulose'</option>
+   <option value="120">120: 'Quantidade Produzida - Madeira em Tora para Outras Finalidades'</option>
+   <option value="121">121: 'Valor da Produção - Carvão Vegetal de Eucalipto'</option>
+   <option value="122">122: 'Valor da Produção - Carvão Vegetal de Pinus'</option>
+   <option value="123">123: 'Valor da Produção - Carvão Vegetal de Outras Espécies'</option>
+   <option value="124">124: 'Valor da Produção - Lenha de Eucalipto'</option>
+   <option value="125">125: 'Valor da Produção - Lenha de Pinus'</option>
+   <option value="126">126: 'Valor da Produção - Lenha de Outras Espécies '</option>
+   <option value="127">127: 'Valor da Produção - Madeira em Tora para Papel e Celulose '</option>
+   <option value="128">128: 'Valor da Produção - Madeira em Tora para Outras Finalidades '</option>
+   <option value="129">129: 'Valor da Produção Total - Silvicultura'</option>
+   <option value="130">130: 'Quantidade Produzida - Alimentícios - Açaí (fruto)'</option>
+   <option value="131">131: 'Quantidade Produzida - Alimentícios - Castanha de Caju'</option>
+   <option value="132">132: 'Quantidade Produzida - Alimentícios - Mangaba (fruto)'</option>
+   <option value="133">133: 'Quantidade Produzida - Alimentícios - Pequi (fruto)'</option>
+   <option value="134">134: 'Quantidade Produzida - Alimentícios - Outros'</option>
+   <option value="135">135: 'Valor da Produção - Alimentícios - Açaí (fruto)'</option>
+   <option value="136">136: 'Valor da Produção - Alimentícios - Castanha de Caju'</option>
+   <option value="137">137: 'Valor da Produção - Alimentícios - Mangaba (fruto)'</option>
+   <option value="138">138: 'Valor da Produção - Alimentícios - Pequi (fruto)'</option>
+   <option value="139">139: 'Valor da Produção - Alimentícios - Outros'</option>
+   <option value="140">140: 'Valor da Produção Total - Extrativismo Vegetal'</option>
+   <option value="141">141: 'Quantidade Produzida - Aromáticos, Medicinais, Tóxicos e Corantes - Jaborandi (folha)'</option>
+   <option value="142">142: 'Quantidade Produzida - Aromáticos, Medicinais, Tóxicos e Corantes - Outros'</option>
+   <option value="143">143: 'Quantidade Produzida - Ceras - Carnaúba (cera)'</option>
+   <option value="144">144: 'Quantidade Produzida - Ceras - Carnaúba (pó)'</option>
+   <option value="145">145: 'Quantidade Produzida - Fibras - Buriti'</option>
+   <option value="146">146: 'Quantidade Produzida - Fibras - Carnaúba'</option>
+   <option value="147">147: 'Quantidade Produzida - Fibras - Piaçava'</option>
+   <option value="148">148: 'Quantidade Produzida - Fibras - Outras'</option>
+   <option value="149">149: 'Quantidade Produzida - Carvão Vegetal'</option>
+   <option value="150">150: 'Quantidade Produzida - Lenha'</option>
+   <option value="151">151: 'Quantidade Produzida - Madeira em Tora'</option>
+   <option value="152">152: 'Quantidade Produzida - Oleaginosos - Babaçu (amêndoa)'</option>
+   <option value="153">153: 'Quantidade Produzida - Oleaginosos - Pequi (amêndoa)'</option>
+   <option value="154">154: 'Quantidade Produzida - Oleaginosos - Tucum (amêndoa)'</option>
+   <option value="155">155: 'Quantidade Produzida - Oleaginosos - Outros'</option>
+   <option value="156">156: 'Valor da Produção - Aromáticos, Medicinais, Tóxicos e Corantes - Jaborandi (folha)'</option>
+   <option value="157">157: 'Valor da Produção - Aromáticos, Medicinais, Tóxicos e Corantes - Outros'</option>
+   <option value="158">158: 'Valor da Produção - Ceras - Carnaúba (cera)'</option>
+   <option value="159">159: 'Valor da Produção - Ceras - Carnaúba (pó)'</option>
+   <option value="160">160: 'Valor da Produção - Fibras - Buriti'</option>
+   <option value="161">161: 'Valor da Produção - Fibras - Carnaúba'</option>
+   <option value="162">162: 'Valor da Produção - Fibras - Piaçava'</option>
+   <option value="163">163: 'Valor da Produção - Fibras - Outras'</option>
+   <option value="164">164: 'Valor da Produção - Carvão Vegetal'</option>
+   <option value="165">165: 'Valor da Produção - Lenha'</option>
+   <option value="166">166: 'Valor da Produção - Madeira em Tora'</option>
+   <option value="167">167: 'Valor da Produção - Oleaginosos - Babaçu (amêndoa)'</option>
+   <option value="168">168: 'Valor da Produção - Oleaginosos - Pequi (amêndoa)'</option>
+   <option value="169">169: 'Valor da Produção - Oleaginosos - Tucum (amêndoa)'</option>
+   <option value="170">170: 'Valor da Produção - Oleaginosos - Outros'</option>
+   <option value="171">171: 'Quantidade - Leite'</option>
+   <option value="172">172: 'Quantidade - Ovos de Galinha'</option>
+   <option value="173">173: 'Quantidade - Ovos de Codorna'</option>
+   <option value="174">174: 'Quantidade - Mel de Abelha'</option>
+   <option value="175">175: 'Quantidade - Casulos do Bicho-da-Seda'</option>
+   <option value="176">176: 'Quantidade - Lã'</option>
+   <option value="177">177: 'Valor da Produção - Leite'</option>
+   <option value="178">178: 'Valor da Produção - Ovos de Galinha'</option>
+   <option value="179">179: 'Valor da Produção - Ovos de Codorna'</option>
+   <option value="180">180: 'Valor da Produção - Mel de Abelha'</option>
+   <option value="181">181: 'Valor da Produção - Casulos do Bicho-da-Seda'</option>
+   <option value="182">182: 'Valor da Produção - Lã'</option>
+   <option value="183">183: 'Valor da Produção Total - Produção de Origem Animal'</option>
+   <option value="184">184: 'Quantidade - Carpa'</option>
+   <option value="185">185: 'Quantidade - Curimatã, Curimbatá'</option>
+   <option value="186">186: 'Quantidade - Jatuarana, Piabanha e Piracanjuba'</option>
+   <option value="187">187: 'Quantidade - Matrinxã'</option>
+   <option value="188">188: 'Quantidade - Pacu e Patinga'</option>
+   <option value="189">189: 'Quantidade - Piau, Piapara, Piauçu, Piava'</option>
+   <option value="190">190: 'Quantidade - Pintado, Cachara, Cachapira e Pintachara, Surubim'</option>
+   <option value="191">191: 'Quantidade - Pirapitinga'</option>
+   <option value="192">192: 'Quantidade - Pirarucu'</option>
+   <option value="193">193: 'Quantidade - Tambacu</option> Tambatinga'</option>
+   <option value="194">194: 'Quantidade - Tambaqui'</option>
+   <option value="195">195: 'Quantidade - Tilápia'</option>
+   <option value="196">196: 'Quantidade - Traíra e Trairão'</option>
+   <option value="197">197: 'Quantidade - Tucunaré'</option>
+   <option value="198">198: 'Quantidade - Outros Peixes'</option>
+   <option value="199">199: 'Quantidade - Alevinos'</option>
+   <option value="">200: 'Quantidade - Camarão'</option>
 </select><button style="margin:6px" onclick="atualizar()" class="btn btn-primary">Pesquisar</button><br><br>
 <!--Waves Container-->
 <div>
