--- a/index.html
+++ b/index.html
@@ -234,7 +234,92 @@ c-22.4,3-38.4,9.2-47.8,18.3c-11.2,10.9-13.6,26.7-16.3,45c-3.1,20.8-6.6,44.4-25.3
    <option value="197">197: 'Quantidade - Tucunaré'</option>
    <option value="198">198: 'Quantidade - Outros Peixes'</option>
    <option value="199">199: 'Quantidade - Alevinos'</option>
-   <option value="">200: 'Quantidade - Camarão'</option>
+   <option value="200">200: 'Quantidade - Camarão'</option>
+   <option value="201">201:Quantidade - Ostras, Vieiras e Mexilhões</option>
+  <option value="202">202:Valor da Produção - Carpa</option>
+  <option value="203">203:Valor da Produção - Curimatã, curimbatá</option>
+   <option value="204">204:Valor da Produção - Jatuarana, Piabanha e Piracanjuba</option>
+  <option value="205">205:Valor da Produção - Matrinxã</option>
+  <option value="206">206:Valor da Produção - Pacu e Patinga</option>
+  <option value="207">207:Valor da Produção - Piau, Piapara, Piauçu, Piava</option>
+   <option value="208">208:Valor da Produção - Pintado, Cachara, Cachapira e Pintachara, Surubim</option>
+   <option value="209">209:Valor da Produção - Pirapitinga</option>
+   <option value="210">210:Valor da Produção - Pirarucu</option>
+ <option value="211">211:Valor da Produção - Tambacu, Tambatinga</option>
+  <option value="212">212:Valor da Produção - Tambaqui</option>
+ <option value="213">213:Valor da Produção - Tilápia</option>
+ <option value="214">214:Valor da Produção - Traíra e Trairão</option>
+ <option value="215">215:Valor da Produção - Tucunaré</option> 
+ <option value="216">216:Valor da Produção - Outros Peixes</option>
+ <option value="217">217:Valor da Produção - Alevinos</option>
+<option value="218">218:Valor da Produção - Camarão</option>
+<option value="219">219:Valor da Produção - Ostras, Vieiras e Mexilhões</option>
+<option value="220">220:Valor da Produção Total - Aquicultura</option>
+<option value="221">221:Efetivo de Rebanho Bovino</option>
+<option value="222">222:Efetivo de Rebanho Bubalino</option>
+<option value="223">223:Efetivo de Rebanho Equino</option>
+<option value="224">224:Efetivo de Rebanho Suíno - Total</option>
+<option value="225">225:Efetivo de Rebanho Suíno - Matrizes de Suínos</option>
+<option value="226">226:Efetivo de Rebanho Caprino</option>
+<option value="227">227:Efetivo de Rebanho Ovino</option>
+ <option value="228">228:Efetivo de Rebanho Galináceos - Total</option>
+<option value="229">229:Efetivo de Rebanho Galináceos - Galinhas</option>
+<option value="230">230:Efetivo de Rebanho Codornas</option>
+ <option value="231">231:Produto Interno Bruto a Preços Correntes - Estadual</option>
+<option value="233">233:Valor Adicionado Bruto Total das Atividades - Estadual</option>
+<option value="234">234:Valor Adicionado Bruto da Agropecuária - Estadual</option>
+<option value="235">235:Quantidade Produzida - Oleaginosos - Copaíba (óleo)</option>
+ <option value="240">240:Valor da Produção - Oleaginosos - Copaíba (óleo)</option>
+<option value="251">251:Produto Interno Bruto a Preços Correntes - Municipal</option>
+<option value="252">252:Impostos, Líquidos de Subsídios, sobre Produtos a Preços Correntes - Municipal</option>
+<option value="253">253:Valor Adicionado Bruto Total a Preços Correntes - Municipal</option>
+<option value="254">254:Valor Adicionado Bruto do Setor Primário a Preços Correntes - Municipal</option>
+ <option value="255">255:Quantidade Produzida - Carvão Vegetal - Total</option>
+<option value="256">256:Valor Adicionado Bruto do Setor Secundário a Preços Correntes - Municipal</option>
+ <option value="257">257:Quantidade Produzida - Lenha - Total</option>
+<option value="258">258:Valor Adicionado Bruto do Setor Terciário a Preços Correntes, Exclusive</option> Administração, Defesa, Educação e Saúde Públicas e Seguridade Social - Municipal</option>
+  <option value="259">259:Quantidade Produzida - Madeira em Tora - Total</option>
+<option value="260">260:Valor Adicionado Bruto da Administração, Defesa, Educação e Saúde Públicas e Seguridade Social a Preços Correntes - Municipal</option>
+ <option value="261">261:Valor da Produção - Carvão Vegetal - Total</option>
+<option value="268">268:População de 14 anos ou mais de idade, ocupada na semana de referência, com rendimento - Cor ou raça - Branca</option>
+<option value="269">269:População de 14 anos ou mais de idade, ocupada na semana de referência, com rendimento - Cor ou raça - Parda</option>
+<option value="278">278:População de 14 anos ou mais de idade, ocupada na semana de referência, com rendimento (mil pessoas)</option>
+<option value="279">279:População de 14 anos ou mais de idade, ocupada na semana de referência, com rendimento - gênero - Homens</option>
+<option value="280">280:População de 14 anos ou mais de idade, ocupada na semana de referência, com rendimento - gênero - Mulheres</option>
+<option value="281">281:População de 14 anos ou mais de idade, ocupada na semana de referência, com rendimento - Nível de instrução mais elevado alcançado - Sem instrução</option>
+ <option value="282">282:População de 14 anos ou mais de idade, ocupada na semana de referência, com rendimento - Nível de instrução mais elevado alcançado - Ensino fundamental incompleto ou equivalente</option>
+ <option value="283">283:População de 14 anos ou mais de idade, ocupada na semana de referência, com rendimento - Nível de instrução mais elevado alcançado - Ensino fundamental completo ou equivalente</option>
+ <option value="284">284:População de 14 anos ou mais de idade, ocupada na semana de referência, com rendimento - Nível de instrução mais elevado alcançado - Ensino médio incompleto ou equivalente</option>
+<option value="285">285:População de 14 anos ou mais de idade, ocupada na semana de referência, com rendimento - Nível de instrução mais elevado alcançado - Ensino médio completo ou equivalente</option>
+<option value="286">286:População de 14 anos ou mais de idade, ocupada na semana de referência, com rendimento - Nível de instrução mais elevado alcançado - Ensino superior incompleto ou equivalente</option>
+<option value="287">287:População de 14 anos ou mais de idade, ocupada na semana de referência, com rendimento - Nível de instrução mais elevado alcançado - Ensino superior completo ou equivalente</option>
+ <option value="288">288:Rendimento médio mensal real das pessoas de 14 anos ou mais de idade, de todos os trabalhos, a preços médios do ano</option>
+ <option value="289">289:Rendimento médio mensal real das pessoas de 14 anos ou mais de idade, de todos os trabalhos, a preços médios do ano - gênero - Homens</option>
+ <option value="290">290:Rendimento médio mensal real das pessoas de 14 anos ou mais de idade, de todos os trabalhos, a preços médios do ano - gênero - Mulheres</option>
+ <option value="291">291:Rendimento médio mensal real das pessoas de 14 anos ou mais de idade, de todos os trabalhos, a preços médios do ano - Cor ou raça - Branca</option>
+ <option value="292">292:Rendimento médio mensal real das pessoas de 14 anos ou mais de idade, de todos os trabalhos, a preços médios do ano - Cor ou raça - Parda</option>
+<option value="293">293:Rendimento médio mensal real das pessoas de 14 anos ou mais de idade, de todos os trabalhos, a preços médios do ano - Cor ou raça - Preta</option>
+<option value="294">294:Rendimento médio mensal real das pessoas de 14 anos ou mais de idade, de todos os trabalhos, a preços médios do ano - Nível de instrução mais elevado alcançado - Sem instrução</option>
+<option value="295">295:Rendimento médio mensal real das pessoas de 14 anos ou mais de idade, de todos os trabalhos, a preços médios do ano - Nível de instrução mais elevado alcançado - Ensino fundamental incompleto ou equivalente</option>
+<option value="296">296:Rendimento médio mensal real das pessoas de 14 anos ou mais de idade, de todos os trabalhos, a preços médios do ano - Nível de instrução mais elevado alcançado - Ensino fundamental completo ou equivalente</option>
+<option value="297">297:Rendimento médio mensal real das pessoas de 14 anos ou mais de idade, de todos os trabalhos, a preços médios do ano - Nível de instrução mais elevado alcançado - Ensino médio incompleto ou equivalente</option>
+ <option value="298">298:Rendimento médio mensal real das pessoas de 14 anos ou mais de idade, de todos os trabalhos, a preços médios do ano - Nível de instrução mais elevado alcançado - Ensino médio completo ou equivalente</option>
+  <option value="299">299:Rendimento médio mensal real das pessoas de 14 anos ou mais de idade, de todos os trabalhos, a preços médios do ano - Nível de instrução mais elevado alcançado - Ensino superior incompleto ou equivalente
+ <option value="300">300:Rendimento médio mensal real das pessoas de 14 anos ou mais de idade, de todos os trabalhos, a preços médios do ano - Nível de instrução mais elevado alcançado - Ensino superior completo ou equivalente
+ <option value="394">394:População Residente - Urbana</option>
+<option value="395">395:População Residente - Rural</option>
+ <option value="396">396:População Residente - Homens</option>
+ <option value="397">397:População Residente - Mulheres</option>
+ <option value="398">398: População Residente - Branca</option>
+<option value="399">399:População Residente - Preta</option>
+<option value="400">400:População Residente - Amarela</option>
+<option value="401">401:População Residente - Parda</option>
+ <option value="402">402:População Residente - Indígena</option>
+  <option value="403">403:População Residente - Sem  declaração Racial</option>
+<option value="426">426:Contagem da População 2007</option>
+ <option value="427">427:População Residente Estimada</option>
+<option value="879">879:Valor da Produção - Lenha - Total</option>
+ <option value="880">882: População de 14 anos ou mais de idade, ocupada na semana de referência, com rendimento - Cor ou raça - Preta</option>
 </select><button style="margin:6px" onclick="atualizar()" class="btn btn-primary">Pesquisar</button><br><br>
 <!--Waves Container-->
 <div>
