--- a/index.html
+++ b/index.html
@@ -916,6 +916,7 @@ fetch(url)
 
 </html>
 <style>
+
 table{
   display: flex;
   flex-direction: column;
@@ -1063,8 +1064,9 @@ p {
     font-size:24px;
   }
 }
-
-
+select_serie{
+	max-width:200px;
+	}
 Resources
 
 </style>
